# pa

./: .gitignore  CMakeLists.txt  README.txt  ballDetection  ballDetection.cpp  imageProcessing.cpp  imageProcessing.h  lib.cpp  lib.h  postDetection.cpp  postDetection.h
rapport/: .math.tex.swp  geek.tex
