cmake_minimum_required(VERSION 2.8)
project( ballDetection )
find_package( OpenCV REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} )
add_executable( ballDetection ballDetection.cpp postDetection.h postDetection.cpp )
target_link_libraries( ballDetection ${OpenCV_LIBS} opencv_ocl opencv_nonfree )
set(CMAKE_BUILD_TYPE Debug)
