cmake_minimum_required(VERSION 2.8)
project( ballDetection )
find_package( OpenCV REQUIRED )
find_package( Threads REQUIRED )
add_definitions(-std=c++11)
include_directories( ${OpenCV_INCLUDE_DIRS} )
add_executable( ballDetection ballDetection.cpp postDetection.h postDetection.cpp imageProcessing.h imageProcessing.cpp )
target_link_libraries( ballDetection ${OpenCV_LIBS} opencv_ocl opencv_nonfree ${CMAKE_THREAD_LIBS_INIT} )
set(CMAKE_BUILD_TYPE Release)
